Fixed table spacing bug

--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -602,6 +602,7 @@ input:required {
 	width: 100%;
 	table-layout: fixed;
 	box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+	border-spacing: 0;
 }
 
 #packagingTable td, #packagingTable th {
